--- a/contact.html
+++ b/contact.html
@@ -76,8 +76,8 @@
                     ></span>
                     <div class="info-wrapper">
                       <p class="info-title">
-                        Office 281, corridor 16 Mezzanine floor, Unique World
-                        Business centere, Hamzha Building Al Karama Dubai UAE
+                        Office 281, Mezzanine floor, Unique World
+                        Business Tower, Hamzha Building Al Karama Dubai UAE
                       </p>
                     </div>
                   </li>
@@ -355,8 +355,8 @@
                         <div class="ts-contact-content">
                           <h3 class="ts-contact-title">Find Us</h3>
                           <p>
-                            Office 281, corridor 16 Mezzanine floor, Unique
-                            World Business centere, Hamzha Building Al Karama
+                            Office 281, Mezzanine floor, Unique
+                            World Business Tower, Hamzha Building Al Karama
                             Dubai UAE
                           </p>
                         </div>
@@ -424,8 +424,8 @@
                   <div class="footer-box-content">
                     <h3>Head Office</h3>
                     <p style="line-height: 15px; width: 200px">
-                      Office 281, corridor 16 Mezzanine floor ,unique world
-                      business centere ,hamzha building Al karama Dubai UAE
+                      Office 281, Mezzanine floor ,unique world
+                      business Tower ,hamzha building Al karama Dubai UAE
                     </p>
                   </div>
                 </div>
