--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                         </li>
                         <li class=" last"><span class="info-icon"><i class="icon icon-map-marker2"></i></span>
                            <div class="info-wrapper">
-                              <p class="info-title" style="width: 350px;">Office 281, corridor 16
-                                 Mezzanine floor, Unique World Business centere, Hamzha Building Al Karama Dubai UAE</p>
+                              <p class="info-title" style="width: 350px;">Office 281,
+                                 Mezzanine floor, Unique World Business Tower, Hamzha Building Al Karama Dubai UAE</p>
                            </div>
                         </li>
                      </ul>
@@ -554,7 +554,7 @@ We take a personal approach to developing customer relationships, recognizing ou
                   <div class="col-lg-4 footer-box"><i class="icon icon-map-marker2"></i>
                      <div class="footer-box-content" >
                         <h3>Head Office</h3>
-                        <p style="line-height: 15px; width: 198px;">Office 281, corridor 16 Mezzanine floor ,unique world business centere ,hamzha building Al karama Dubai UAE</p>
+                        <p style="line-height: 15px; width: 198px;">Office 281,Mezzanine floor ,unique world business Tower ,hamzha building Al karama Dubai UAE</p>
                      </div>
                   </div>
                   <!-- Box 1 end-->
